Added Header Line, fonts. Aligned images properly. Other cleanup.

--- a/final_project.html
+++ b/final_project.html
@@ -5,40 +5,54 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">  </head>
 
   <body>
-  <div class="grid">
+
+  <div class="container">
     <div class="row">
-      <div class="col-6">text</div>
-      <div style="text-align:right;" class="col-6">
-        <h1>Jane Doette!</h1>
-        <h3>Code Ninja</h3>  
+      <div class="col-6">
+      	<img class="logo" src="http://placehold.it/100x100" alt="Udacity Logo"></div>
+      <div class="col-6">
+        <h1 class="name_text">JANE DOETTE</h1>
+        <h4 class="title_text">FRONT-END NINJA</h4>  
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-12">
+      	<div class="header_line"></div>
+      </div>
+    </div>
+
 
   	<div class="row">
       <div class="col-12">
-        <img src="http://placekitten.com/1000/350">
+        <img src="http://placehold.it/960x350" alt="Large image of computer code">
       </div>
     </div>
+
     <div class="row">
       <div class="col-12">
         <h3>Featured Work</h3>
       </div>
     </div>
+    
     <div class="row">
       <div class="col-6 col-l-4">
-        <img src="http://placehold.it/300x200" align="middle">
-        <div style="text-align:center;" class="col-4"><h2>Appify</h2></div>
+        <img src="http://placehold.it/300x200">
+        <div style="text-align:center;"><h2>Appify</h2></div>
+        <div style="text-align:center;"><p>github_link</p></div>
       </div>
       <div class="col-6 col-l-4">
         <img src="http://placehold.it/300x200">
-        <div style="text-align:center;" class="col-4"><h2>Sunflower</h2></div>
+        <div style="text-align:center;"><h2>Sunflower</h2></div>
+        <div style="text-align:center;"><p>github_link</p></div>
       </div>
       <div class="col-6 col-l-4">
         <img src="http://placehold.it/300x200">
-        <div style="text-align:center;" class="col-4"><h2>Bokeh</h2></div>
+        <div style="text-align:center;"><h2>Bokeh</h2></div>
+        <div style="text-align:center;"><p>github_link</p></div>
       </div>
     </div>
 
