Add photos and additional text. Corrected minor response issues.

--- a/final_project.html
+++ b/final_project.html
@@ -12,7 +12,8 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-      	<img class="logo" src="http://placehold.it/100x100" alt="Udacity Logo"></div>
+      	<img class="logo" src="images/Udacity_logo.png" alt="Udacity Logo">
+      </div>
       <div class="col-6">
         <h1 class="name_text">JANE DOETTE</h1>
         <h4 class="title_text">FRONT-END NINJA</h4>  
@@ -28,33 +29,39 @@
 
   	<div class="row">
       <div class="col-12">
-        <img src="http://placehold.it/960x350" alt="Large image of computer code">
+        <img class="main_image" src="images/code.png" alt="Large image of computer code">
       </div>
     </div>
 
     <div class="row">
       <div class="col-12">
-        <h3>Featured Work</h3>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-6 col-l-4">
-        <img src="http://placehold.it/300x200">
-        <div style="text-align:center;"><h2>Appify</h2></div>
-        <div style="text-align:center;"><p>github_link</p></div>
-      </div>
-      <div class="col-6 col-l-4">
-        <img src="http://placehold.it/300x200">
-        <div style="text-align:center;"><h2>Sunflower</h2></div>
-        <div style="text-align:center;"><p>github_link</p></div>
-      </div>
-      <div class="col-6 col-l-4">
-        <img src="http://placehold.it/300x200">
-        <div style="text-align:center;"><h2>Bokeh</h2></div>
-        <div style="text-align:center;"><p>github_link</p></div>
+        <h3 class="subtitle_text">Featured Work</h3>
       </div>
     </div>
 
-</body>
+    <div class="row">
+      <div class="col-6 col-l-4">
+        <img class="project_image" src="images/Appify.png" alt="image of a mobile icon">
+        <div><h2 class="project_text">Appify</h2></div>
+        <p>A mobile application for turning your photos into app icons!</p>
+        <div class="links"><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></div>
+      </div>
+
+      <div class="col-6 col-l-4">
+        <img class="project_image" src="images/sunflower.png" alt="image of a sunflower">
+        <div><h2 class="project_text">Sunflower</h2></div>
+        <p>A webpage showcasing photos of sunflowers!</p>
+        <div class="links"><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></div>
+      </div>
+
+      <div class="col-6 col-l-4">
+        <img class="project_image" src="images/bokeh.png" alt="image of the sun behind a tree">
+        <div><h2 class="project_text">Bokeh</h2></div>
+        <p>A mobile application that adds filters to photos!</p>
+        <div class="links"><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></div>
+      </div>
+    </div>
+  </div>
+  </body>
+
 </html>
